--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         FullStack Developers design and update websites and online applications using various programming languages and dgesin tools.
                         Education is a powerfull weapon.
 
-                        My friends are , Ammar,Tauseef Rahul, Aamir, Osama.</p>
+                   </p>
                     <a href="#">//Download CV</a>
                 </div>
             </div>
@@ -114,7 +114,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>my creative skills are c langugae, mysql , html ,css ,javascript,typing and good communication
+                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in,C , C++, ,HTML,CSS,JAVASCRIPT, MYSQL .
                     </p>
                     <a href="#">Read more</a>
                 </div>
@@ -159,7 +159,7 @@
         </div>
     </section>
 
-    <!-- teams section start -->
+<!--     <!-- teams section start -->
     <section class="teams" id="teams">
         <div class="max-width">
             <h2 class="title">My teams</h2>
@@ -200,15 +200,15 @@
                 <div class="card">
                     <div class="box">
                         <img src="am.jpg" alt="">
-                        <div class="text">Ammar</div>
+                       <div class="text">Ammar</div>
                         <div class="text">Team Member</div>
                         <p>Java, Html, Css, Javascript, Software Devoloper.</p>
-                    </div>
+                    </div> 
                 </div>
             </div>
         </div>
     </section>
-
+ -->
     <!-- contact section start -->
     <section class="contact" id="contact">
         <div class="max-width">
@@ -216,7 +216,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>If you want any work done here... for you so contact my team members..</p>
+                    <p>Feel free to get in touch with me. I am always open to discussing new projects, creative ideas or opportunities to be part of your visions.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
