--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Frooque Ahmad SOLUTION <span>IT.</span></a></div>
+            <div class="logo"><a href="#">Frooque Khan SOLUTION <span>IT.</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -58,8 +58,8 @@
                     <img src="fk.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Farooque and I'm a <span class="typing-2"></span></div>
-                    <p>My self my name is Farooque Khan. I am from Utter pardesh .
+                    <div class="text">I'm Farooque Ahmad and I'm a <span class="typing-2"></span></div>
+                    <p>My self my name is Farooque Ahmad. I am from Utter pardesh .
                         FullStack Developers design and update websites and online applications using various programming languages and dgesin tools.
                         Education is a powerfull weapon.
 
