--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in,C , C++, ,HTML,CSS,JAVASCRIPT, MYSQL .
+                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in,C , C++, ,HTML,CSS,JAVASCRIPT, MYSQL,Python,Flask,Django .
                     </p>
                     <a href="#">Read more</a>
                 </div>
@@ -135,7 +135,7 @@
                     <div class="bars">
                         <div class="info">
                             <span>JavaScript</span>
-                            <span>70%</span>
+                            <span>50%</span>
                         </div>
                         <div class="line js"></div>
                     </div>
@@ -152,6 +152,27 @@
                             <span>70%</span>
                         </div>
                         <div class="line mysql"></div>
+                    </div>
+		     <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+		     <div class="bars">
+                        <div class="info">
+                            <span>Flask</span>
+                            <span>78%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+		      <div class="bars">
+                        <div class="info">
+                            <span>Django</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line php"></div>
                     </div>
                 </div>
             </div>
