--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in,C , C++, ,HTML,CSS,JAVASCRIPT, MYSQL,Python,Flask,Django .
+                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in, C, C++ ,HTML, CSS, JAVASCRIPT, MYSQL, Python, Flask ,Django .
                     </p>
                     <a href="#">Read more</a>
                 </div>
