--- a/index.html
+++ b/index.html
@@ -153,27 +153,27 @@
                         </div>
                         <div class="line mysql"></div>
                     </div>
-		     <div class="bars">
+<!-- 		     <div class="bars">
                         <div class="info">
                             <span>Python</span>
                             <span>80%</span>
                         </div>
                         <div class="line php"></div>
-                    </div>
-		     <div class="bars">
+                    </div> -->
+<!-- 		     <div class="bars">
                         <div class="info">
                             <span>Flask</span>
                             <span>78%</span>
                         </div>
                         <div class="line php"></div>
-                    </div>
-		      <div class="bars">
+                    </div> -->
+<!-- 		      <div class="bars">
                         <div class="info">
                             <span>Django</span>
                             <span>80%</span>
                         </div>
                         <div class="line php"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
