--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in, C, C++ ,HTML, CSS, JAVASCRIPT, MYSQL, Python, Flask ,Django .
+                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in, C, C++ ,HTML, CSS, JAVASCRIPT, MYSQL, Python, JAVA, JSP, Servlet, Hibernate, JDBC.
                     </p>
                     <a href="#">Read more</a>
                 </div>
@@ -153,27 +153,41 @@
                         </div>
                         <div class="line mysql"></div>
                     </div>
-<!-- 		     <div class="bars">
+ 		        <div class="bars">
                         <div class="info">
                             <span>Python</span>
                             <span>80%</span>
                         </div>
                         <div class="line php"></div>
-                    </div> -->
-<!-- 		     <div class="bars">
+                    </div> 
+    		     <div class="bars">
                         <div class="info">
-                            <span>Flask</span>
+                            <span>JAVA</span>
                             <span>78%</span>
                         </div>
                         <div class="line php"></div>
-                    </div> -->
-<!-- 		      <div class="bars">
+                    </div> 
+		          <div class="bars">
                         <div class="info">
-                            <span>Django</span>
+                            <span>JSP</span>
                             <span>80%</span>
                         </div>
                         <div class="line php"></div>
-                    </div> -->
+                    </div> 
+					<div class="bars">
+                        <div class="info">
+                            <span>Hibernate</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div> 
+					<div class="bars">
+                        <div class="info">
+                            <span>Servlet</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div> 
                 </div>
             </div>
         </div>
@@ -260,3 +274,4 @@
 </body>
 
 </html>
+
