--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>Strong in design and integration with intuitive problem-solving skills. Proficient in, C, C++ ,HTML, CSS, JAVASCRIPT, MYSQL, Python, JAVA, JSP, Servlet, Hibernate, JDBC.
+                    <p>A motivated fresher with strong interest in application design and development. Good problem-solving skills and basic understanding of software development concepts. Familiar with C, C++, HTML, CSS, JavaScript, MySQL, Python, Java, JSP, Servlets, Hibernate, and JDBC, with hands-on practice in building small projects and database-driven applications.”
                     </p>
                     <a href="#">Read more</a>
                 </div>
@@ -274,4 +274,5 @@
 </body>
 
 </html>
+
 
