--- a/index.html
+++ b/index.html
@@ -158,35 +158,35 @@
                             <span>Python</span>
                             <span>80%</span>
                         </div>
-                        <div class="line Python"></div>
+                        <div class="line python"></div>
                     </div> 
     		     <div class="bars">
                         <div class="info">
                             <span>JAVA</span>
                             <span>78%</span>
                         </div>
-                        <div class="line JAVA"></div>
+                        <div class="line java"></div>
                     </div> 
 		          <div class="bars">
                         <div class="info">
                             <span>JSP</span>
                             <span>80%</span>
                         </div>
-                        <div class="line JSP"></div>
+                        <div class="line jsp"></div>
                     </div> 
 					<div class="bars">
                         <div class="info">
                             <span>Hibernate</span>
                             <span>80%</span>
                         </div>
-                        <div class="line Hibernate"></div>
+                        <div class="line hibernate"></div>
                     </div> 
 					<div class="bars">
                         <div class="info">
                             <span>Servlet</span>
                             <span>80%</span>
                         </div>
-                        <div class="line Servlet"></div>
+                        <div class="line servlet"></div>
                     </div> 
                 </div>
             </div>
@@ -274,6 +274,7 @@
 </body>
 
 </html>
+
 
 
 
