--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                         </div>
                         <div class="line js"></div>
                     </div>
-                    <div class="bars">
+                    <!-- <div class="bars">
                         <div class="info">
                             <span>PHP</span>
                             <span>50%</span>
                         </div>
                         <div class="line php"></div>
-                    </div>
+                    </div> -->
                     <div class="bars">
                         <div class="info">
                             <span>MySQL</span>
@@ -163,7 +163,7 @@
     		     <div class="bars">
                         <div class="info">
                             <span>JAVA</span>
-                            <span>78%</span>
+                            <span>85%</span>
                         </div>
                         <div class="line java"></div>
                     </div> 
@@ -177,14 +177,21 @@
 					<div class="bars">
                         <div class="info">
                             <span>Hibernate</span>
-                            <span>80%</span>
+                            <span>85%</span>
                         </div>
                         <div class="line hibernate"></div>
                     </div> 
 					<div class="bars">
                         <div class="info">
+                            <span>JDBC</span>
+                            <span>87%</span>
+                        </div>
+                        <div class="line jdbc"></div>
+                    </div> 
+					<div class="bars">
+                        <div class="info">
                             <span>Servlet</span>
-                            <span>80%</span>
+                            <span>87%</span>
                         </div>
                         <div class="line servlet"></div>
                     </div> 
@@ -274,6 +281,7 @@
 </body>
 
 </html>
+
 
 
 
