--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Lucknow Uttar pradesh</div>
+                                <div class="sub-title">Sakinaka, Mumbai</div>
                             </div>
                         </div>
                         <div class="row">
@@ -281,6 +281,7 @@
 </body>
 
 </html>
+
 
 
 
